codegen/parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            |

   4  decl : ident TOKEN_COLON type TOKEN_ASSGN expr TOKEN_SEMICOLON
   5       | ident TOKEN_COLON type TOKEN_SEMICOLON
   6       | ident TOKEN_COLON type TOKEN_ASSGN TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE
   7       | ident TOKEN_COLON type TOKEN_ASSGN TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE TOKEN_SEMICOLON

   8  type : TOKEN_STRING
   9       | TOKEN_INT
  10       | TOKEN_CHAR
  11       | TOKEN_BOOLEAN
  12       | TOKEN_ARRAY TOKEN_LBRACE opt_expr TOKEN_RBRACE type
  13       | TOKEN_FUNCTION type TOKEN_LPAREN param_list TOKEN_RPAREN
  14       | TOKEN_VOID

  15  param_list : n_param_list
  16             |

  17  n_param_list : param
  18               | param TOKEN_COMMA n_param_list

  19  param : ident TOKEN_COLON type

  20  ident : TOKEN_IDENT

  21  stmt_list : stmt stmt_list
  22            |

  23  stmt : stmt_matched
  24       | n_stmt_matched

  25  stmt_matched : decl
  26               | expr TOKEN_SEMICOLON
  27               | TOKEN_FOR TOKEN_LPAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RPAREN stmt_matched
  28               | TOKEN_RETURN opt_expr TOKEN_SEMICOLON
  29               | TOKEN_PRINT expr_list TOKEN_SEMICOLON
  30               | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_matched TOKEN_ELSE stmt_matched
  31               | stmt_block

  32  stmt_block : TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE

  33  n_stmt_matched : TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
  34                 | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_matched TOKEN_ELSE n_stmt_matched
  35                 | TOKEN_FOR TOKEN_LPAREN opt_expr TOKEN_SEMICOLON opt_expr TOKEN_SEMICOLON opt_expr TOKEN_RPAREN n_stmt_matched

  36  opt_expr : expr
  37           |

  38  expr_list : n_expr_list
  39            |

  40  n_expr_list : expr TOKEN_COMMA n_expr_list
  41              | expr

  42  expr_block : TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE

  43  n_expr_list_block : expr_block TOKEN_COMMA n_expr_list_block
  44                    | expr_block
  45                    | n_expr_list

  46  expr : expr_not_assgn TOKEN_ASSGN expr
  47       | expr_not_assgn

  48  expr_not_assgn : expr_not_assgn TOKEN_OR expr_and
  49                 | expr_and

  50  expr_and : expr_and TOKEN_AND expr_comp
  51           | expr_comp

  52  expr_comp : expr_comp TOKEN_LE expr_arith
  53            | expr_comp TOKEN_GE expr_arith
  54            | expr_comp TOKEN_LT expr_arith
  55            | expr_comp TOKEN_GT expr_arith
  56            | expr_comp TOKEN_EQ expr_arith
  57            | expr_comp TOKEN_NE expr_arith
  58            | expr_arith

  59  expr_arith : expr_arith TOKEN_ADD expr_geom
  60             | expr_arith TOKEN_SUB expr_geom
  61             | expr_geom

  62  expr_geom : expr_geom TOKEN_MULT expr_exp
  63            | expr_geom TOKEN_DIV expr_exp
  64            | expr_geom TOKEN_MOD expr_exp
  65            | expr_exp

  66  expr_exp : expr_exp TOKEN_EXP expr_unary
  67           | expr_unary

  68  expr_unary : TOKEN_NOT expr_unary
  69             | TOKEN_SUB expr_unary
  70             | expr_incr

  71  expr_incr : expr_grouping TOKEN_INCREMENT
  72            | expr_grouping TOKEN_DECREMENT
  73            | expr_grouping

  74  expr_grouping : TOKEN_LPAREN expr TOKEN_RPAREN
  75                | ident TOKEN_LBRACE expr TOKEN_RBRACE expr_array
  76                | ident TOKEN_LPAREN expr_list TOKEN_RPAREN
  77                | expr_primary

  78  expr_array : TOKEN_LBRACE expr TOKEN_RBRACE expr_array
  79             |

  80  expr_primary : TOKEN_INT_LITERAL
  81               | ident
  82               | TOKEN_CHAR_LITERAL
  83               | TOKEN_TRUE
  84               | TOKEN_FALSE
  85               | TOKEN_STRING_LITERAL

state 0
	$accept : . program $end  (0)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	ident  goto 5


state 1
	ident : TOKEN_IDENT .  (20)

	.  reduce 20


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : .  (3)

	TOKEN_IDENT  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	ident  goto 5


state 5
	decl : ident . TOKEN_COLON type TOKEN_ASSGN expr TOKEN_SEMICOLON  (4)
	decl : ident . TOKEN_COLON type TOKEN_SEMICOLON  (5)
	decl : ident . TOKEN_COLON type TOKEN_ASSGN TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE  (6)
	decl : ident . TOKEN_COLON type TOKEN_ASSGN TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE TOKEN_SEMICOLON  (7)

	TOKEN_COLON  shift 7
	.  error


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	decl : ident TOKEN_COLON . type TOKEN_ASSGN expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON . type TOKEN_SEMICOLON  (5)
	decl : ident TOKEN_COLON . type TOKEN_ASSGN TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE  (6)
	decl : ident TOKEN_COLON . type TOKEN_ASSGN TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE TOKEN_SEMICOLON  (7)

	TOKEN_STRING  shift 8
	TOKEN_INT  shift 9
	TOKEN_ARRAY  shift 10
	TOKEN_BOOLEAN  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_FUNCTION  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 15


state 8
	type : TOKEN_STRING .  (8)

	.  reduce 8


state 9
	type : TOKEN_INT .  (9)

	.  reduce 9


state 10
	type : TOKEN_ARRAY . TOKEN_LBRACE opt_expr TOKEN_RBRACE type  (12)

	TOKEN_LBRACE  shift 16
	.  error


state 11
	type : TOKEN_BOOLEAN .  (11)

	.  reduce 11


state 12
	type : TOKEN_CHAR .  (10)

	.  reduce 10


state 13
	type : TOKEN_FUNCTION . type TOKEN_LPAREN param_list TOKEN_RPAREN  (13)

	TOKEN_STRING  shift 8
	TOKEN_INT  shift 9
	TOKEN_ARRAY  shift 10
	TOKEN_BOOLEAN  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_FUNCTION  shift 13
	TOKEN_VOID  shift 14
	.  error

	type  goto 17


state 14
	type : TOKEN_VOID .  (14)

	.  reduce 14


state 15
	decl : ident TOKEN_COLON type . TOKEN_ASSGN expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON type . TOKEN_SEMICOLON  (5)
	decl : ident TOKEN_COLON type . TOKEN_ASSGN TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE  (6)
	decl : ident TOKEN_COLON type . TOKEN_ASSGN TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE TOKEN_SEMICOLON  (7)

	TOKEN_ASSGN  shift 18
	TOKEN_SEMICOLON  shift 19
	.  error


state 16
	type : TOKEN_ARRAY TOKEN_LBRACE . opt_expr TOKEN_RBRACE type  (12)
	opt_expr : .  (37)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INT_LITERAL  shift 21
	TOKEN_CHAR_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_LPAREN  shift 26
	TOKEN_NOT  shift 27
	TOKEN_RBRACE  reduce 37

	expr  goto 28
	opt_expr  goto 29
	expr_and  goto 30
	expr_comp  goto 31
	expr_arith  goto 32
	expr_geom  goto 33
	expr_exp  goto 34
	expr_unary  goto 35
	expr_incr  goto 36
	expr_grouping  goto 37
	expr_primary  goto 38
	expr_not_assgn  goto 39
	ident  goto 40


state 17
	type : TOKEN_FUNCTION type . TOKEN_LPAREN param_list TOKEN_RPAREN  (13)

	TOKEN_LPAREN  shift 41
	.  error


state 18
	decl : ident TOKEN_COLON type TOKEN_ASSGN . expr TOKEN_SEMICOLON  (4)
	decl : ident TOKEN_COLON type TOKEN_ASSGN . TOKEN_LCURLBRACE stmt_list TOKEN_RCURLBRACE  (6)
	decl : ident TOKEN_COLON type TOKEN_ASSGN . TOKEN_LCURLBRACE n_expr_list_block TOKEN_RCURLBRACE TOKEN_SEMICOLON  (7)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INT_LITERAL  shift 21
	TOKEN_CHAR_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_LPAREN  shift 26
	TOKEN_LCURLBRACE  shift 42
	TOKEN_NOT  shift 27
	.  error

	expr  goto 43
	expr_and  goto 30
	expr_comp  goto 31
	expr_arith  goto 32
	expr_geom  goto 33
	expr_exp  goto 34
	expr_unary  goto 35
	expr_incr  goto 36
	expr_grouping  goto 37
	expr_primary  goto 38
	expr_not_assgn  goto 39
	ident  goto 40


state 19
	decl : ident TOKEN_COLON type TOKEN_SEMICOLON .  (5)

	.  reduce 5


state 20
	expr_primary : TOKEN_STRING_LITERAL .  (85)

	.  reduce 85


state 21
	expr_primary : TOKEN_INT_LITERAL .  (80)

	.  reduce 80


state 22
	expr_primary : TOKEN_CHAR_LITERAL .  (82)

	.  reduce 82


state 23
	expr_primary : TOKEN_FALSE .  (84)

	.  reduce 84


state 24
	expr_primary : TOKEN_TRUE .  (83)

	.  reduce 83


state 25
	expr_unary : TOKEN_SUB . expr_unary  (69)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INT_LITERAL  shift 21
	TOKEN_CHAR_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_LPAREN  shift 26
	TOKEN_NOT  shift 27
	.  error

	expr_unary  goto 44
	expr_incr  goto 36
	expr_grouping  goto 37
	expr_primary  goto 38
	ident  goto 40


state 26
	expr_grouping : TOKEN_LPAREN . expr TOKEN_RPAREN  (74)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INT_LITERAL  shift 21
	TOKEN_CHAR_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_LPAREN  shift 26
	TOKEN_NOT  shift 27
	.  error

	expr  goto 45
	expr_and  goto 30
	expr_comp  goto 31
	expr_arith  goto 32
	expr_geom  goto 33
	expr_exp  goto 34
	expr_unary  goto 35
	expr_incr  goto 36
	expr_grouping  goto 37
	expr_primary  goto 38
	expr_not_assgn  goto 39
	ident  goto 40


state 27
	expr_unary : TOKEN_NOT . expr_unary  (68)

	TOKEN_IDENT  shift 1
	TOKEN_STRING_LITERAL  shift 20
	TOKEN_INT_LITERAL  shift 21
	TOKEN_CHAR_LITERAL  shift 22
	TOKEN_FALSE  shift 23
	TOKEN_TRUE  shift 24
	TOKEN_SUB  shift 25
	TOKEN_LPAREN  shift 26
	TOKEN_NOT  shift 27
	.  error

	expr_unary  goto 46
	expr_incr  goto 36
	expr_grouping  goto 37
	expr_primary  goto 38
	ident  goto 40


state 28
	opt_expr : expr .  (36)

	.  reduce 36


state 29
	type : TOKEN_ARRAY TOKEN_LBRACE opt_expr . TOKEN_RBRACE type  (12)

	TOKEN_RBRACE  shift 47
	.  error


state 30
	expr_not_assgn : expr_and .  (49)
	expr_and : expr_and . TOKEN_AND expr_comp  (50)

	TOKEN_AND  shift 48
	TOKEN_OR  reduce 49
	TOKEN_ASSGN  reduce 49
	TOKEN_SEMICOLON  reduce 49
	TOKEN_RPAREN  reduce 49
	TOKEN_RBRACE  reduce 49
	TOKEN_RCURLBRACE  reduce 49
	TOKEN_COMMA  reduce 49


state 31
	expr_and : expr_comp .  (51)
	expr_comp : expr_comp . TOKEN_LE expr_arith  (52)
	expr_comp : expr_comp . TOKEN_GE expr_arith  (53)
	expr_comp : expr_comp . TOKEN_LT expr_arith  (54)
	expr_comp : expr_comp . TOKEN_GT expr_arith  (55)
	expr_comp : expr_comp . TOKEN_EQ expr_arith  (56)
	expr_comp : expr_comp . TOKEN_NE expr_arith  (57)

	TOKEN_GT  shift 49
	TOKEN_GE  shift 50
	TOKEN_EQ  shift 51
	TOKEN_LE  shift 52
	TOKEN_LT  shift 53
	TOKEN_NE  shift 54
	TOKEN_AND  reduce 51
	TOKEN_OR  reduce 51
	TOKEN_ASSGN  reduce 51
	TOKEN_SEMICOLON  reduce 51
	TOKEN_RPAREN  reduce 51
	TOKEN_RBRACE  reduce 51
	TOKEN_RCURLBRACE  reduce 51
	TOKEN_COMMA  reduce 51


state 32
	expr_comp : expr_arith .  (58)
	expr_arith : expr_arith . TOKEN_ADD expr_geom  (59)
	expr_arith : expr_arith . TOKEN_SUB expr_geom  (60)

	TOKEN_ADD  shift 55
	TOKEN_SUB  shift 56
	TOKEN_GT  reduce 58
	TOKEN_GE  reduce 58
	TOKEN_EQ  reduce 58
	TOKEN_LE  reduce 58
	TOKEN_LT  reduce 58
	TOKEN_AND  reduce 58
	TOKEN_OR  reduce 58
	TOKEN_NE  reduce 58
	TOKEN_ASSGN  reduce 58
	TOKEN_SEMICOLON  reduce 58
	TOKEN_RPAREN  reduce 58
	TOKEN_RBRACE  reduce 58
	TOKEN_RCURLBRACE  reduce 58
	TOKEN_COMMA  reduce 58


state 33
	expr_arith : expr_geom .  (61)
	expr_geom : expr_geom . TOKEN_MULT expr_exp  (62)
	expr_geom : expr_geom . TOKEN_DIV expr_exp  (63)
	expr_geom : expr_geom . TOKEN_MOD expr_exp  (64)

	TOKEN_MULT  shift 57
	TOKEN_DIV  shift 58
	TOKEN_MOD  shift 59
	TOKEN_ADD  reduce 61
	TOKEN_SUB  reduce 61
	TOKEN_GT  reduce 61
	TOKEN_GE  reduce 61
	TOKEN_EQ  reduce 61
	TOKEN_LE  reduce 61
	TOKEN_LT  reduce 61
	TOKEN_AND  reduce 61
	TOKEN_OR  reduce 61
	TOKEN_NE  reduce 61
	TOKEN_ASSGN  reduce 61
	TOKEN_SEMICOLON  reduce 61
	TOKEN_RPAREN  reduce 61
	TOKEN_RBRACE  reduce 61
	TOKEN_RCURLBRACE  reduce 61
	TOKEN_COMMA  reduce 61


state 34
	expr_geom : expr_exp .  (65)
	expr_exp : expr_exp . TOKEN_EXP expr_unary  (66)

	TOKEN_EXP  shift 60
	TOKEN_ADD  reduce 65
	TOKEN_SUB  reduce 65
	TOKEN_MULT  reduce 65
	TOKEN_DIV  reduce 65
	TOKEN_MOD  reduce 65
	TOKEN_GT  reduce 65
	TOKEN_GE  reduce 65
	TOKEN_EQ  reduce 65
	TOKEN_LE  reduce 65
	TOKEN_LT  reduce 65
	TOKEN_AND  reduce 65
	TOKEN_OR  reduce 65
	TOKEN_NE  reduce 65
	TOKEN_ASSGN  reduce 65
	TOKEN_SEMICOLON  reduce 65
	TOKEN_RPAREN  reduce 65
	TOKEN_RBRACE  reduce 65
	TOKEN_RCURLBRACE  reduce 65
	TOKEN_COMMA  reduce 65


state 35
	expr_exp : expr_unary .  (67)

	.  reduce 67


state 36
	expr_unary : expr_incr .  (70)

	.  reduce 70


state 37
	expr_incr : expr_grouping . TOKEN_INCREMENT  (71)
	expr_incr : expr_grouping . TOKEN_DECREMENT  (72)
	expr_incr : expr_grouping .  (73)

	TOKEN_INCREMENT  shift 61
	TOKEN_DECREMENT  shift 62
	TOKEN_ADD  reduce 73
	TOKEN_SUB  reduce 73
	TOKEN_MULT  reduce 73
	TOKEN_DIV  reduce 73
	TOKEN_MOD  reduce 73
	TOKEN_EXP  reduce 73
	TOKEN_GT  reduce 73
	TOKEN_GE  reduce 73
	TOKEN_EQ  reduce 73
	TOKEN_LE  reduce 73
	TOKEN_LT  reduce 73
	TOKEN_AND  reduce 73
	TOKEN_OR  reduce 73
	TOKEN_NE  reduce 73
	TOKEN_ASSGN  reduce 73
	TOKEN_SEMICOLON  reduce 73
	TOKEN_RPAREN  reduce 73
	TOKEN_RBRACE  reduce 73
	TOKEN_RCURLBRACE  reduce 73
	TOKEN_COMMA  reduce 73


state 38
	expr_grouping : expr_primary .  (77)

	.  reduce 77


state 39
	expr : expr_not_assgn . TOKEN_ASSGN expr  (46)
	expr : expr_not_assgn .  (47)
	expr_not_assgn : expr_not_assgn . TOKEN_OR expr_and  (48)

	TOKEN_OR  shift 63
	TOKEN_ASSGN  shift 64
	TOKEN_SEMICOLON  reduce 47
	TOKEN_RPAREN  reduce 47
	TOKEN_RBRACE  reduce 47
	TOKEN_RCURLBRACE  reduce 47
	TOKEN_COMMA  reduce 47


state 40
	expr_grouping : ident . TOKEN_LBRACE expr TOKEN_RBRACE expr_array  (75)
	expr_grouping : ident . TOKEN_LPAREN expr_list TOKEN_RPAREN  (76)
	expr_primary : ident .  (81)
